--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
               </li>
               <li>A-Frame: declarative HTML markup
               </li>
-              <li>Standardize only after JS experimentation
+              <li>Standardize after JS experimentation
               </li>
             </ul>
           </li>
@@ -326,8 +326,8 @@
             </ul>
           </li>
           <li>
-            <strong>Broadly</strong>, a catch-all term for various features
-            that enable VR on the Web
+            <strong>Broadly</strong>, a catch-all term for features that enable
+            VR on the Web
             <ul>
               <li class="next">
                 <span>WebVR API,</span> <span class="next">Gamepad API,</span>
@@ -790,11 +790,11 @@
             </ul>
           </li>
           <li>Send your feedback to: <a href=
-          "https://lists.w3.org/Archives/Member/w3c-ac-members/2017JanMar/0045.html">
-            w3c-ac-members@w3.org</a>, <a href=
-            "https://lists.w3.org/Archives/Member/chairs/2017JanMar/0137.html">chairs@w3.org</a>,
-            or <a href="https://github.com/w3c/webvr-charter/issues">open an
-            issue</a>
+          "https://lists.w3.org/Archives/Member/w3c-ac-forum/">w3c-ac-forum@w3.org</a>,
+          <a href=
+          "https://lists.w3.org/Archives/Member/chairs/2017JanMar/0137.html">chairs@w3.org</a>,
+          or <a href="https://github.com/w3c/webvr-charter/issues">open an
+          issue</a>
           </li>
         </ol>
       </div>
