--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
             <td>
               <a href=
               "https://mail.mozilla.org/pipermail/web-vr-discuss/2014-May/000000.html">
-              Mozilla's VR Research</a> kicks off
+              Mozilla's VR Research</a> kicked off
             </td>
           </tr>
           <tr>
