Fix for cross-domain fonts
Firefox (per spec) fails to load cross-domain fonts while this
talk is hosted outside w3.org domain. This fix loads the same
fonts from the same origin-domain.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     "https://www.w3.org/2014/shower/shower/themes/ribbon/styles/screen.css">
     <link rel="stylesheet" href=
     "https://www.w3.org/2014/shower/shower/themes/w3c/styles/styles_w3c.css">
+    <link rel="stylesheet" href="fonts/fonts.css">
     <style>
       #Cover h2, #Cover2 h2 {
       top: 24px;
